deploy/fmcore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmcore
  labels:
    app: fmcore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fmcore
  template:
    metadata:
      labels:
        app: fmcore
    spec:
      containers:
        - name: fmcore
          image: buithethuat03/fmcore:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fmcore-service
spec:
  type: LoadBalancer
  loadBalancerIP: 35.247.187.27
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: fmcore
