deploy/fmgateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmgateway
  labels:
    app: fmgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fmgateway
  template:
    metadata:
      labels:
        app: fmgateway
    spec:
      containers:
        - name: fmgateway
          image: buithethuat03/fmgatewayvcb:latest
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: fmgateway-service
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: fmgateway
